Basic Gamemode setup, custom playerstate added
Two end conditions, one time based, one points based.
Renamed Activatable classes to match convention of other classes.
Added copyright line.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,5 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=9688648648AE6F517723D2AE6B121002
 ProjectName=Third Person Game Template
+CopyrightNotice=Copyright (c) 2025, Izabella Szabo. All rights reserved.
+
